[package]
authors     = ["Rhaki"]
description = "Terminal manager for displaying outputs/errors of processes launched from rust code."
edition     = "2021"
license     = "MIT"
name        = "process-terminal"
repository  = "https://github.com/Rhaki/process-terminal"
version     = "0.1.7"

[dependencies]
anyhow    = "1"
crossterm = "0.28"
ratatui   = "0.29"
regex     = "1"
textwrap  = "0.16.2"

